--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,8 @@
 		"suppressImplicitAnyIndexErrors": true,
 		"noUnusedLocals": true,
 		"noUnusedParameters": true,
-		"esModuleInterop": true
+		"esModuleInterop": true,
+		"allowSyntheticDefaultImports": true
 	},
 	"include": [
 		"src"
