--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "push:publish": "git push && npm publish",
     "build": "tsc ./index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -11,7 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@postilion/models": "^1.0.9",
+    "@postilion/models": "^1.1.0",
     "await-on": "^0.1.4",
     "colors": "^1.4.0",
     "config": "^3.2.4",
