--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@postilion/utils",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -18,8 +18,7 @@
     "config": "^3.2.4",
     "moment": "^2.24.0",
     "moment-range": "^4.0.2",
-    "request": "^2.88.0",
-    "rss-parser": "^3.7.3"
+    "request": "^2.88.0"
   },
   "compierOptions": {
     "lib": [
