--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@postilion/utils",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -18,6 +18,7 @@
     "config": "^3.2.4",
     "moment": "^2.24.0",
     "moment-range": "^4.0.2",
+    "pluralize": "^8.0.0",
     "request": "^2.88.0"
   },
   "compierOptions": {
